//----------------------------------------------------------------------------------------------------
// ConcreteProductA1.hpp
//----------------------------------------------------------------------------------------------------

//----------------------------------------------------------------------------------------------------
#pragma once
#include "AbstractProductA.hpp"

//----------------------------------------------------------------------------------------------------
/// @brief
/// Concrete Products are created by corresponding Concrete Factories.
//----------------------------------------------------------------------------------------------------
class ConcreteProductA1 final : public AbstractProductA
{
public:
    std::string FooFunctionA() const override;
};