//----------------------------------------------------------------------------------------------------
// ConcreteProductA2.hpp
//----------------------------------------------------------------------------------------------------

//----------------------------------------------------------------------------------------------------
#pragma once
#include "AbstractProductA.hpp"

//----------------------------------------------------------------------------------------------------
/// @brief
/// Concrete Products are created by corresponding Concrete Factories.
//----------------------------------------------------------------------------------------------------
class ConcreteProductA2 final : public AbstractProductA
{
    std::string FooFunctionA() const override;
};